correcting another error

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </table>
 
   <br>
-  <a href="/python-api-challenge/">My Python API Homework</a>
+  <a href=/python-api-challenge>My Python API Homework</a>
 </body>
 
 </html>
